tests/paczka1/fuzzy1/86860256.err
Error in line 2: xRbRaU A767 29,4
Error in line 6: DMWgn8SC A767 46,73
Error in line 1: Ij0N A200 5,8
Error in line 10: xRbRaU S19 16,2
Error in line 15: 82KK S19 6,9
Error in line 21: xRbRaU A767 36,1
Error in line 32: DMWgn8SC A350 76,2
Error in line 28: xRbRaU A350 28,2
